8274130: C2: MulNode::Ideal chained transformations may act on wrong nodes

Reviewed-by: kvn
Backport-of: 756d22c3563ac92e74bb68d5eecb86d4fbab2c6b