src/hotspot/share/opto/mulnode.cpp
@@ -59,13 +59,11 @@ Node* MulNode::Identity(PhaseGVN* phase) {
 // We also canonicalize the Node, moving constants to the right input,
 // and flatten expressions (so that 1+x+2 becomes x+3).
 Node *MulNode::Ideal(PhaseGVN *phase, bool can_reshape) {
-  const Type *t1 = phase->type( in(1) );
-  const Type *t2 = phase->type( in(2) );
-  Node *progress = NULL;        // Progress flag
+  Node* in1 = in(1);
+  Node* in2 = in(2);
+  Node* progress = NULL;        // Progress flag
 
   // convert "max(a,b) * min(a,b)" into "a*b".
-  Node *in1 = in(1);
-  Node *in2 = in(2);
   if ((in(1)->Opcode() == max_opcode() && in(2)->Opcode() == min_opcode())
       || (in(1)->Opcode() == min_opcode() && in(2)->Opcode() == max_opcode())) {
     Node *in11 = in(1)->in(1);
@@ -83,9 +81,14 @@ Node *MulNode::Ideal(PhaseGVN *phase, bool can_reshape) {
         igvn->_worklist.push(in1);
         igvn->_worklist.push(in2);
       }
+      in1 = in(1);
+      in2 = in(2);
       progress = this;
     }
   }
+
+  const Type* t1 = phase->type(in1);
+  const Type* t2 = phase->type(in2);
 
   // We are OK if right is a constant, or right is a load and
   // left is a non-constant.
